fix: photo video and filters gap

--- a/src/app/(pages)/(static)/picture/style.module.css
+++ b/src/app/(pages)/(static)/picture/style.module.css
@@ -1,4 +1,7 @@
-
+.filterContainer{
+  margin-right: 20px;
+  margin-left: 20px;
+}
 .Picture {
   background: white;
 }
@@ -61,7 +64,7 @@
   cursor: pointer;
 }
 .PictureGallary {
-  width: 78vw;
+  width: 100vw;
   height: 530px;
   transform: translateX(260px);
   opacity: 1;
@@ -169,9 +172,9 @@
   .PictureSection {
     display: flex;
     align-items: center;
-    justify-content: center;
-    /* justify-content: flex-start; */
-    flex-direction: column;
+    /* justify-content: center; */
+    justify-content: flex-start;
+    flex-direction: row;
   }
   .PictureSectionFilter {
     visibility: visible !important;
@@ -179,6 +182,7 @@
     position: relative;
     width: 100vw !important;
   }
+
   .desktopViewFilter {
     display: none;
   }
